[gd_scene load_steps=3 format=2]

[ext_resource path="res://Presets/RFSoda40.tres" type="DynamicFont" id=1]
[ext_resource path="res://Scripts/SelectLevel.gd" type="Script" id=2]

[node name="SelectLevel" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
level_sprite_name = [ "Level001", "Level002", "Level003", "Level004" ]

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -115.0
margin_top = 11.0
margin_right = 117.0
margin_bottom = 51.0
custom_fonts/font = ExtResource( 1 )
text = "Select Level"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Prev" type="Button" parent="."]
margin_left = 6.0
margin_top = 6.0
margin_right = 102.0
margin_bottom = 52.0
custom_fonts/font = ExtResource( 1 )
text = "Prev"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Next" type="Button" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -104.0
margin_top = 6.0
margin_right = -8.0
margin_bottom = 52.0
custom_fonts/font = ExtResource( 1 )
text = "Next"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelSprite" type="Sprite" parent="."]
position = Vector2( 525, 298 )
scale = Vector2( 0.5, 0.5 )

[node name="ChooseThisLevel" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.99
anchor_right = 0.5
anchor_bottom = 0.99
margin_left = -161.0
margin_top = -51.0
margin_right = 163.0
margin_bottom = -4.99994
custom_fonts/font = ExtResource( 1 )
text = "Choose This Level"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Prev" to="." method="_on_Prev_pressed"]
[connection signal="pressed" from="Next" to="." method="_on_Next_pressed"]
[connection signal="pressed" from="ChooseThisLevel" to="." method="_on_ChooseThisLevel_pressed"]
